--- a/index.html
+++ b/index.html
@@ -8,22 +8,33 @@
     <title>Guess My Number!</title>
   </head>
   <body>
-    <header>
-      <h1 class="message">Guess My Number!</h1>
-      <p class="between">(Between 1 and 20)</p>
-      <button class="btn again">Again!</button>
-      <div class="number">?</div>
-    </header>
-    <main>
-      <section class="left">
-        <input type="number" class="guess" />
-        <button class="btn check">Check!</button>
-      </section>
-      <section class="right">
-        <p class="label-score">Score: <span class="score">0</span></p>
-        <p class="label-highscore">Highscore: <span class="highscore">0</span></p>
-      </section>
-    </main>
+    <div class="container">
+      <header>
+        <div class="top-container">
+          <p class="between">(Between 1 and 20)</p>
+          <button class="btn again">Again!</button>
+        </div>
+        <h1 class="message">Guess My Number!</h1>
+        <div class="number-container">
+          <span></span>
+          <div class="number">?</div>
+        </div>
+      </header>
+      <main>
+        <div class="bottom-container">
+          <section class="left">
+            <input type="number" class="guess" />
+            <button class="btn check">Check!</button>
+          </section>
+          <section class="right">
+            <p class="label-score">Score: <span class="score">0</span></p>
+            <p class="label-highscore">
+              High Score: <span class="high-score">0</span>
+            </p>
+          </section>
+        </div>
+      </main>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
